# porepy

./: .gitignore  .isort.cfg  .travis.yml  CONTRIBUTING.md  Docker.md  Install.md  LICENSE.md  MANIFEST.in  Papers.md  Readme.md  Readme.rst  asv.conf.json  basics.py  cell_data.py  coarsening.py  comptest.py  conftest.py  constants.py  debug.py  debug_model.py  demo.py  diagvec_mul_jac_error.py  dual.py  dual_coupling.py  exporter.py  fetch_content.py  flashtest.py  frac_viz_utils.py  fvutils.py  geometry.py  graph.py  grid_bucket.py  half_space.py  half_space_int.py  hybrid.py  mass.py  mass_matrix.py  matrix_compression.py  mcolon.py  mpfa.py  (+33 more)
.dependabot/: config.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: build-push-develop-docker-image.yml  build-push-stable-docker-image.yml  build-test-stable-docker_image.yml  check_tutorials.yml  ci.yml  push-develop-docker-image.yml  push-docker-image.yml  push-stable-docker-image.yml  rebase_docs_on_develop.yml  run-pytest-all.yml  run-pytest.yml  run-static-checks-docs.yml  run-static-checks.yml  update_protocol_docstrings.yml
RUNSCRIPTS/: run_compositional_flow.py
bc/: bc.py
benchmarks/: SPF_geo_0_grid_1.py  poromechanics_geo0_grid1.py  single_phase_flow_geo0_grid1.py
benchmarks/benchmarks/: importing.py
build_tools/: protocol_docstrings_script.py
constit/: fourth_order_tensor.py  permeability.py  second_order_tensor.py
data/: flow_benchmark_2d_geiger_setup.py
doc/source/: conf.py  example_docstrings.py  home.rst  index.rst
dockerfiles/: Dockerfile  dependencies.txt  environment.yml  intelpython.Dockerfile  parse_environment.py
dockerfiles/base/: Dockerfile  _legacy_conda_dockerfile  set-home-permission.sh  set-home-permissions.sh
dockerfiles/dev/: Dockerfile
dockerfiles/py27/: Dockerfile  WELCOME
dockerfiles/py27-dev/: Dockerfile  install
dockerfiles/py36/: Dockerfile  dependencies  matplotlibsrc
dockerfiles/py36-dev/: Dockerfile  install
dockerfiles/stable/: Dockerfile
docs/: Makefile  conf.py  example_docstrings.py  index.html  index.rst  make.bat
docs/doctrees/: home.doctree  index.doctree
docs/html/: .buildinfo  genindex-A.html  genindex-B.html  genindex-C.html  genindex-D.html  genindex-E.html  genindex-F.html  genindex-G.html  genindex-H.html  genindex-I.html  genindex-J.html  genindex-K.html  genindex-L.html  genindex-M.html  genindex-N.html  genindex-O.html  genindex-P.html  genindex-Q.html  genindex-R.html  genindex-S.html  genindex-T.html  genindex-U.html  genindex-V.html  genindex-W.html  genindex-Y.html  genindex-Z.html  genindex-_.html  genindex-all.html  genindex.html  home.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
examples/: Readme.md  __init__.py  block_inv.py  darcy.py  dual.py  dual_coupling.py  flow_benchmark_2d_case_1.py  flow_benchmark_2d_case_3.py  flow_benchmark_3d_case_3.py  hybrid.py  mandel_biot.py  single_fracture_under_compression.py  singlephase_flow.py  soereide_geothermal.py  terzaghi_biot.py
examples/example1/: Readme.md
examples/example10/: DFN_meshing.ipynb  Darcy_equation.ipynb  darcy_and_transport.ipynb  fracture_extrusion.ipynb
examples/example11/: Robin_Thomas_aperture_and_sifs.py  Robin_Thomas_aperture_comparison.py  dc_on_analytical_apertures  displacement_correlation_convergence_tests.py  (+3 more)
fractured/: fractures.py  grid_2d.py  grid_3d.py  meshing.py  simplex.py  split_grid.py  structured.py
gmsh/: fractured_domain.py  fractured_domain_2d.py  gmsh_interface.py  mesh_2_grid.py  mesh_io.py
grids/: check.py  extract_subgrid.py  grid.py  partition.py  point_grid.py  simplex.py  structured.py
jupyter/: WriteGmsh2D.ipynb  mpfa_conv_2d.ipynb  mpsa_conv.ipynb  tpfa_conv_2d.ipynb
scripts_vl/: brainpain.py  calc_flash_h2o_co2.py  cftest.py  chemtest.py  comptest.py  dbg.py  fc.py  get_thermo_flash_data.py  parcalc_flash_h2o_co2.py  playground.py  plot_pr_z_error.py  plot_thermo_comparison.py  plot_time_flash.py  prc.py  prtest.py  rrtest.py  test_compiler.py  testmodel.py  thermo_comparison.py  thermotest.py
simulations/: richards-ad-test.py  two-phase-flow-ad-test.py
solver/: abstract_coupling.py  coupler.py  solver.py
test/: common.py  test_grids.py  test_utils.py
tests/: matrix_test_dual_hybrid_vem_3d_ani_cart.txt  matrix_test_dual_hybrid_vem_3d_iso_cart.txt  matrix_test_dual_vem_3d_ani_cart.txt  matrix_test_dual_vem_3d_iso_cart.txt  mpfa_conv_test.py  setup_grids.py  test_basics.py  test_biot.py  test_ccw.py  test_coarsening.py  test_dual.py  test_face_tags.py  test_fracture_center.py  test_fvutils.py  test_graph.py  test_grids.py  test_half_space.py  test_half_space_int.py  test_hybrid.py  test_inside_polygon.py  test_intersections.py  test_mpfa.py  test_mpsa.py  test_polygon_boundaries_intersect.py  test_polygon_segment_intersection.py  test_segment_intersection_3d.py  test_setmembership.py  test_sort_points.py  test_split_grid.py  test_structured.py  test_tpfa.py  test_utils.py  tmp.grid_bucket
transport/: upwind.py  upwind_coupling.py
tutorials/: AdFramework.ipynb  Automatic differentiation with third party software.ipynb  DFNMeshing.ipynb  DFN_meshing.ipynb  Darcy equation.ipynb  Darcy_equation.ipynb  Dictionary.txt  Parameter_assignment_assembler_setup.ipynb  Readme.md  ad_framework.ipynb  algorithmic_differentiation.ipynb  automatic_differentiation.ipynb  benchmark_simulation.ipynb  biot.ipynb  boundary_conditions.ipynb  compostional_flow.ipynb  compressible_flow_with_automatic_differentiation.ipynb  contact_mechanics_with_AD.ipynb  conventions.ipynb  convergence_criteria.ipynb  convert_file.py  cubic_eos.ipynb  darcy_and_transport.ipynb  darcy_and_transport_data.py  darcy_and_transport_equations.ipynb  diagnostics.ipynb  equation_definition.ipynb  equations.ipynb  equations_ad.ipynb  exporter.ipynb  exporting_models.ipynb  flash.ipynb  fluid_modeling.ipynb  fluid_modeling.py  flux_discretizations.ipynb  fracture_deformation.ipynb  fracture_extrusion.ipynb  from_single_phase.py  get_started.ipynb  grid_structure.ipynb  (+29 more)
visualization/: times.json
(+4018 files in other folders)
