[tool.poetry]
name = "porepy"
version = "1.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
meshio = "^4.3.5"
networkx = "^2.3"
sympy = "^1.4"
matplotlib = "^3.0.3"
cython = "^0.29.7"
future = "^0.17.1"
six = "^1.12.0"
shapely = {extras = ["vectorized"], version = "^1.7.0"}
numba = "^0.53.0"
scipy = "^1.4.1"
numpy = "^1.18.5"
gmsh = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-runner = "^5.2"
black = "20.08b1"
mypy = "^0.790"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
