[metadata]
description-file = Readme.md

[aliases]
test=pytest

[tool:pytest]
python_files = test/unit/*.py test/integration/*.py examples/*/test_*.py
addopts = --cov=src/porepy --cov-report term-missing -p no:warnings

[flake8]
max-line-length = 95
ignore = 
  # F541: f-string is missing placeholders
  F541,
  # W503: line break before binary operator
  W503,
  # E731 do not assign a lambda expression, use a def
  E731,
  # E203 whitespace before ':'
  E203,
  # E266 too many leading '#' for block comment
  E266,
  # allow to use \dot
  W605
exclude = 
  src/porepy/__init__.py,
  src/porepy/numerics/ad/__init__.py,

  
[mypy]
warn_unused_configs = True
  
