[metadata]
description-file = Readme.md

[aliases]
test=pytest

[tool:pytest]
python_files = tests/*.py
addopts = --cov=src/porepy --cov-report term-missing -p no:warnings

[flake8]
max-line-length = 95
ignore = 
  # F541: f-string is missing placeholders
  F541,
  # W503: line break before binary operator
  W503,
  # E731 do not assign a lambda expression, use a def
  E731,
  # E203 whitespace before ':'
  E203,
  # E266 too many leading '#' for block comment
  E266,
  # allow to use \dot
  W605
  # Multiple statements on each line - this conflicts with black's preferences
  E701
  E704
exclude = 
  src/porepy/__init__.py,
  src/porepy/numerics/ad/__init__.py,
per-file-ignores =
  # F401: imported but unused on files __init__.py
  __init__.py:F401
  # F403: from .module import *, ignore because of definition of __all__
  src/porepy/compositional/__init__.py:F403,F401
  src/porepy/compositional/peng_robinson/__init__.py:F403,F401
  
[mypy]
warn_unused_configs = True
plugins = numpy.typing.mypy_plugin 
